[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/player/art/ship.png" type="Texture" id=1]
[ext_resource path="res://src/player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/player/art/ship_part.png" type="Texture" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="RigidBody2D"]
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )
SHIP_POWER = 50.0
TURN_POWER = 100.0
DRAG_FACTOR = 10.0

[node name="WakeParticles" type="CPUParticles2D" parent="."]
scale = Vector2( 0.5, 0.5 )
amount = 50
lifetime = 2.0
local_coords = false
emission_shape = 1
emission_sphere_radius = 14.0
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="DamageParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 10
one_shot = true
explosiveness = 0.8
texture = ExtResource( 3 )
direction = Vector2( 0, 0 )
spread = 180.0
initial_velocity_random = 0.5
angular_velocity_random = 0.5
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.1
scale_amount_curve = SubResource( 2 )

[node name="DeathParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 0.9
texture = ExtResource( 3 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 20.0
angular_velocity = 200.0
angular_velocity_random = 1.0
angle = 90.0
angle_random = 1.0
scale_amount = 0.5
scale_amount_random = 0.1
color_ramp = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -9.5, 14, 9.5, 14, 9.5, -6, 0, -15.5, -9.5, -6 )

[node name="InvicibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_Player_body_shape_entered"]
[connection signal="timeout" from="InvicibilityTimer" to="." method="_on_InvicibilityTimer_timeout"]
